--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="overlay__inner">
             <!-- Title -->
 
-            <h1  class="overlay__title typewriter">Hey!<span><img src="./images/flip.gif" alt="cat-gif" width="20px" height="20px"></span>,i am 
+            <h1  class="overlay__title typewriter">Hey!<span><img src="images/flip.gif" alt="cat-gif" width="20px" height="20px"></span>,i am 
                 <span
                    class="txt-rotate"
                    data-period="2000"
