--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <p class="overlay__description">
                 I like exploring new technologies everyday. 
                 I like combining design and logic to create enjoyable and interactive websites. I also have a keen interest in solving algorithmic problems.
-                <strong>If you'd like to know more, feel free to drop a comment in the form below!</strong>
+                <strong>If you'd like to know more, feel free to drop a comment in the contact section below!</strong>
             </p>
 
             
