--- a/skills.html
+++ b/skills.html
@@ -65,7 +65,7 @@
                   </div>
 
                   <div class="col">
-                  <a href="https://www.frontendmentor.io/profile/Debasish99">
+                  <a href="https://www.frontendmentor.io/profile/Debasish99" target="_blank">
                     <div class="periodic-element intense-work" data-description="Leaning more on css">
                       <div class="periodic-element-inner">
                         <div class="title">Cs</div>
@@ -76,7 +76,7 @@
                   </div>
 
                   <div class="col">
-                  <a href="https://www.frontendmentor.io/profile/Debasish99">
+                  <a href="https://www.frontendmentor.io/profile/Debasish99" target="_blank">
                     <div class="periodic-element intense-work" data-description="Leaning more on HTML">
                       <div class="periodic-element-inner">
                         <div class="title">Ht</div>
@@ -87,7 +87,7 @@
                   </div>
 
                   <div class="col">
-                  <a href="https://github.com/Debasish99">
+                  <a href="https://github.com/Debasish99" target="_blank">
                     <div class="periodic-element intense-work" data-description="Creating GitHub issues, a.k.a. tossing problems which I can solve to the frontend team">
                       <div class="periodic-element-inner">
                         <div class="title">Gt</div>
@@ -98,7 +98,7 @@
                   </div>
 
                   <div class="col">
-                  <a href="./Core Java Training - Certificate of Completion.pdf">
+                  <a href="./Core Java Training - Certificate of Completion.pdf" target="_blank">
                     <div class="periodic-element intense-work" data-description="Reading JAVA">
                       <div class="periodic-element-inner">
                         <div class="title">Ja</div>
@@ -110,7 +110,7 @@
 
 
                   <div class="col">
-                  <a href="https://getbootstrap.com/docs/5.2/getting-started/introduction/">
+                  <a href="https://getbootstrap.com/docs/5.2/getting-started/introduction/" target="_blank">
                     <div class="periodic-element intense-work" data-description="learning bootstrap">
                       <div class="periodic-element-inner">
                         <div class="title">Bo</div>
@@ -131,7 +131,7 @@
                   </div>
                   
                   <div class="col">
-                    <a href="./AWS-UC-b3222448-617f-49d0-8a5a-6407f6cca7b6.pdf">
+                    <a href="./AWS-UC-b3222448-617f-49d0-8a5a-6407f6cca7b6.pdf" target="_blank">
                     <div class="periodic-element intense-work" data-description="Learning to use AWS">
                       <div class="periodic-element-inner">
                         <div class="title">Aw</div>
@@ -142,7 +142,7 @@
                   </div>
 
                   <div class="col">
-                  <a href="./VM-UC-1e8a50d1-ce89-4054-ba1f-5730f2e9fc6f.pdf">
+                  <a href="./VM-UC-1e8a50d1-ce89-4054-ba1f-5730f2e9fc6f.pdf" target="_blank">
                     <div class="periodic-element intense-work" data-description="Just got a training on VMware ">
                       <div class="periodic-element-inner">
                         <div class="title">VM</div>
